@@ -34,14 +34,15 @@ Run:
   variables of that script in case you have some specific needs.
 
   The script breaks on the first test that doesn't do OK. Use -a to prevent
-  the script to abort on the first error. Run the script with -v for more
+  the script from abort on the first error. Run the script with -v for more
   verbose output. Use -d to run the test servers with debug output enabled as
-  well.
+  well. Specifying -k keeps all the log files generated by the test intact.
 
   Use -s for shorter output, or pass test numbers to run specific tests only
   (like "./runtests.pl 3 4" to test 3 and 4 only). It also supports test case
-  ranges with 'to'. As in "./runtests 3 to 9" which runs the seven tests from
-  3 to 9.
+  ranges with 'to', as in "./runtests 3 to 9" which runs the seven tests from
+  3 to 9. Any test numbers starting with ! are disabled, as are any test
+  numbers found in the file data/DISABLED (one per line).
 
 Memory:
   The test script will check that all allocated memory is freed properly IF
